--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -1,8 +1,6 @@
 .contact {
   &__container {
     max-width: 620px;
-    padding-top: 80px;
-    padding-bottom: 50px;
   }
 
   &__desc {
